se hicieron ajustes a todas las páginas y pestañas dentro de la web. Además, se utilizó de manera correcta flex-wrap. flex-direction, align-items y justify-content

--- a/css/h-styles.css
+++ b/css/h-styles.css
@@ -24,22 +24,18 @@ header img {
   color: #adf7b6;
 }
 
-nav {
-  display: none;
-  flex-direction: column;
-}
 nav a {
   color: #ccc;
   text-decoration: none;
   font-size: 18px;
-  margin: 10px 0;
+  margin-left: 15px;
 }
 .container {
   flex: 1; /* Permite que el contenedor principal crezca y ocupe el espacio disponible */
   display: flex;
-  flex-direction: column;
   padding: 20px;
   box-sizing: border-box;
+  gap: 20px;
 }
 
 hr {
@@ -244,8 +240,15 @@ h6 a {
     flex-direction: row;
     gap: 20px;
   }
-  .left, .right {
+  .container {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  .left {
     width: 95%;
+  }
+  .cont-right {
+    width: 100%;
   }
 
 }
